@@ -37,6 +37,7 @@
 * CardStream: Make Void call Cancel instead of Refund [curiousepic]
 * Remove AN and KV country codes as they're not recognized by ISO-3166-1 [apdunston]
 * Worldpay: Pass unchanged amount with correct currency exponent [curiousepic]
+* Improve our handling of currencies sans fractions [duff]
 
 
 == Version 1.58.0 (March 1, 2016)
